--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
 
   --measure: 65ch;
 
+  --color-light: white;
+  --color-dark: #1d1d1d;
+
   --font-family-serif: serif;
   --font-family-sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
